# py_machin_learning

./: pyproject.toml
src/pythonia/: main.py  worldofcode.py
src/pythonia/assets/: world_of_code.csv
